# sdft

./: CMakeLists.txt  README.md
include/sdft/: sdft.h
src/: sdft.c  sdft.cpp  templated_functions.h
test/: actual_signal.h  cplx.h  main.c  minunit.h  my_complex.h
